--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,5 +1,14 @@
-.Style{
-   display: flex;
+.Style {
+    display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
+    width: 100%;
+
+}
+.dark{
+    background-color: grey;
+}
+.light{
+    background-color: white;
 }
