--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,10 +4,11 @@
     align-items: center;
     flex-wrap: wrap;
     width: 100%;
+    height: 100%;
 
 }
 .dark{
-    background-color: grey;
+    background-color: darkgray;
 }
 .light{
     background-color: white;
