--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,13 +3,25 @@
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+}
+.StyleGenre {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100vw;
+    margin: 0;
+    padding: 10px;
+
 
 }
-.dark{
-    background-color: darkgray;
-}
-.light{
-    background-color: white;
-}
+/*.dark{*/
+/*    background-color: darkgray;*/
+/*}*/
+/*.light{*/
+/*    background-color: white;*/
+/*}*/
