--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -10,14 +10,12 @@
 }
 .StyleGenre {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
-    width: 100vw;
+    width: 100%;
     margin: 0;
-    padding: 10px;
-    position: static;
-
+    padding: 0;
 
 }
 .dark{
@@ -30,8 +28,8 @@
     width: 100vw;
     height: 100vh;
     gap: 10px;
-    margin: 0;
-    padding: 0;
+    margin:0;
+    padding: 10px;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows:repeat(4, 1fr);
