--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,11 +2,12 @@
     width: 100vw;
     height: 100vh;
     gap: 10px;
-    margin: 0;
-    padding: 0;
+    margin: 10px;
+    padding: 10px  ;
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows:repeat(4, 1fr);
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows:repeat(5, 1fr);
+
 }
 .StyleGenre {
     display: flex;
@@ -16,14 +17,8 @@
     width: 100%;
     margin: 0;
     padding: 0;
+}
 
-}
-.dark{
-    background-color: darkgray;
-}
-.light{
-    background-color: white;
-}
 .StyleMovieGenre{
     width: 100vw;
     height: 100vh;
